avatar/thumbnail vertical align fix

--- a/src/civicboom/public/styles/common/_thumbnails.scss
+++ b/src/civicboom/public/styles/common/_thumbnails.scss
@@ -11,6 +11,7 @@
     padding: 0;
     overflow: hidden;
     font-size: 40px;
+    vertical-align: middle;
     @include border_radius(0.1em);
     
     img {
